React native app

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,6 +1,5 @@
 {
   "name": "maslo-coaching-client",
-  "main": "node_modules/expo/AppEntry.js",
   "version": "1.3.5",
   "private": true,
   "scripts": {
@@ -17,37 +16,41 @@
     "build:android:prod": "node setEnv production expo build:android -t app-bundle",
     "build:android:prod:nopublish": "yarn build:android:prod --no-publish",
     "check-ts": "ttsc --watch",
-    "start:check-ts": "concurrently --handle-input \"yarn start\" \"yarn check-ts\""
+    "start:check-ts": "concurrently --handle-input \"yarn start\" \"yarn check-ts\"",
+    "ios": "react-native run-ios",
+    "android": "react-native run-android"
   },
   "dependencies": {
     "@heymaslo/persona": "./dependencies/persona",
     "@heymaslo/persona-expo": "./dependencies/persona/expo",
-    "@react-native-community/datetimepicker": "2.2.2",
+    "@react-native-community/datetimepicker": "2.4.0",
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "chroma-js": "^2.1.0",
     "computed-async-mobx": "^4.2.1",
     "d3": "^5.15.1",
-    "expo": "^37.0.7",
-    "expo-apple-authentication": "~2.1.1",
+    "expo": "^38.0.10",
+    "expo-apple-authentication": "~2.2.1",
     "expo-asset": "~8.1.4",
-    "expo-av": "~8.1.0",
-    "expo-camera": "~8.2.0",
-    "expo-constants": "~9.0.0",
-    "expo-crypto": "~8.1.0",
+    "expo-av": "~8.2.1",
+    "expo-camera": "~8.3.1",
+    "expo-constants": "~9.1.1",
+    "expo-crypto": "~8.2.1",
     "expo-device": "^2.1.0",
-    "expo-file-system": "~8.1.0",
-    "expo-font": "~8.1.0",
-    "expo-gl": "~8.1.0",
+    "expo-file-system": "~9.0.1",
+    "expo-font": "~8.2.1",
+    "expo-gl": "~8.3.1",
     "expo-google-app-auth": "^8.1.0",
-    "expo-google-sign-in": "~8.1.0",
-    "expo-haptics": "~8.1.0",
-    "expo-image-manipulator": "~8.1.0",
-    "expo-image-picker": "~8.1.0",
-    "expo-media-library": "~8.1.0",
-    "expo-sensors": "~8.1.0",
+    "expo-google-sign-in": "~8.2.1",
+    "expo-haptics": "~8.2.1",
+    "expo-image-manipulator": "~8.2.1",
+    "expo-image-picker": "~8.3.0",
+    "expo-media-library": "~8.2.1",
+    "expo-sensors": "~9.0.1",
+    "expo-splash-screen": "^0.5.0",
+    "expo-status-bar": "^1.0.0",
     "expo-three": "^5.4.0",
-    "expo-updates": "~0.1.2",
+    "expo-updates": "~0.2.10",
     "firebase": "7.9.0",
     "gsap": "^3.2.6",
     "history": "^4.10.1",
@@ -58,16 +61,23 @@
     "mobx-react": "^6.2.2",
     "mobx-utils": "^5.5.7",
     "qs": "^6.9.3",
-    "react": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
+    "react": "~16.11.0",
+    "react-dom": "~16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-appearance": "~0.3.3",
+    "react-native-dev-menu": "^4.0.2",
     "react-native-gesture-handler": "~1.6.1",
     "react-native-markdown-renderer": "^3.2.8",
     "react-native-modal-datetime-picker": "^8.5.4",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-screens": "~2.9.0",
     "react-native-shadow": "^1.2.2",
-    "react-native-svg": "~11.0.1",
+    "react-native-siri-shortcut": "^1.9.2",
+    "react-native-svg": "~12.1.0",
     "react-native-switch-pro": "./dependencies/react-native-switch-pro",
+    "react-native-unimodules": "~0.10.1",
+    "react-native-web": "~0.11.7",
     "react-test-renderer": "^16.13.1",
     "sentry-expo": "^2.0.3",
     "simplex-noise": "^2.4.0",
@@ -90,6 +100,7 @@
     "@types/react-test-renderer": "^16.9.2",
     "@types/ts-nameof": "^4.2.1",
     "axios-mock-adapter": "^1.18.1",
+    "babel-jest": "~25.2.6",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-replace-dynamic-import-runtime": "^1.0.2",
     "babel-plugin-transform-define": "^2.0.0",
@@ -107,6 +118,7 @@
     "react-dom": "16.13.1",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-typescript-transformer": "^1.2.13",
+    "react-test-renderer": "~16.11.0",
     "rimraf": "^3.0.2",
     "sinon": "^9.0.1",
     "ts-jest": "^25.3.1",
