Fix: native driver warning

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -26,6 +26,7 @@
     "expo-haptics": "^8.2.1",
     "expo-image-manipulator": "^8.2.1",
     "expo-image-picker": "^8.4.0",
+    "expo-linking": "^1.0.3",
     "expo-media-library": "^8.4.0",
     "expo-three": "^5.5.1",
     "expo-updates": "^0.2.14",
@@ -43,6 +44,7 @@
     "react-native-markdown-renderer": "^3.2.8",
     "react-native-modal-datetime-picker": "^8.9.3",
     "react-native-shadow": "^1.2.2",
+    "react-native-siri-shortcut": "^1.9.2",
     "react-native-svg": "^12.1.0",
     "react-native-unimodules": "^0.10.1",
     "sentry-expo": "^2.1.2",
