--- a/mobile/ios/CompanionKit/Info.plist
+++ b/mobile/ios/CompanionKit/Info.plist
@@ -48,10 +48,12 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>com.maslo.companionkit.SiriShortcutsModule.sayHello</string>
+	</array>
 </dict>
 </plist>
