--- a/mobile/app.json
+++ b/mobile/app.json
@@ -32,7 +32,7 @@
     "usesAppleSignIn": true,
     "icon": "./src/assets/appicons/appicon.png",
     "buildNumber": "1",
-    "bundleIdentifier": "com.maslo.evolution",
+    "bundleIdentifier": "...",
     "config": {
       "usesNonExemptEncryption": false,
       "googleSignIn": {
@@ -55,7 +55,7 @@
         "certificateHash": "..."
       }
     },
-    "package": "com.maslo.evolution",
+    "package": "...",
     "googleServicesFile": "./configs/app/google-services.json",
     "versionCode": 1,
     "intentFilters": [
