finish firebase setup and deploy

--- a/server/.firebaserc
+++ b/server/.firebaserc
@@ -1,6 +1,6 @@
-  
 {
   "projects": {
-    "production": "..."
-  },
-  "targets": {...}
+    "staging": "bipolarbridges",
+    "default": "bipolarbridges"
+  }
+}
