--- a/package.json
+++ b/package.json
@@ -8,20 +8,15 @@
     },
     "scripts": {
         "all": "yarn && cd dashboard && yarn && cd ../mobile && yarn && cd ../server/functions && yarn && cd ../..",
-
         "dev:dashboard": "cd dashboard && yarn dev",
         "dev:server": "cd server/functions && yarn dev:functions",
         "dev": "concurrently -k \"yarn dev:server\" \"yarn dev:dashboard\"",
-
         "build:emails": "cd emails && npm i && npm run build && cd ..",
-
         "build:dashboard": "cd dashboard && yarn && yarn build:prod:env:toserver && cd ..",
         "build:dashboard:stage": "cross-env APP_ENV=staging yarn build:dashboard",
         "build:dashboard:prod": "cross-env APP_ENV=production yarn build:dashboard",
-
         "deploy:server:stage": "cd server/functions && yarn && yarn deploy:stage && cd ../..",
         "deploy:server:prod": "cd server/functions && yarn && yarn deploy:prod && cd ../..",
-
         "deploy:dashboard": "yarn build:dashboard && cd server/functions && yarn deploy:hosting:dashboard",
         "deploy:dashboard:stage": "yarn build:dashboard:stage && cd server/functions && yarn deploy:hosting:dashboard:stage",
         "deploy:dashboard:prod": "yarn build:dashboard:prod && cd server/functions && yarn deploy:hosting:dashboard:prod"
@@ -56,5 +51,7 @@
         "ttypescript": "^1.5.10",
         "typescript": "^3.8.3"
     },
-    "dependencies": {}
+    "dependencies": {
+        "@react-native-firebase/dynamic-links": "^7.5.13"
+    }
 }
