--- a/server/firebase.json
+++ b/server/firebase.json
@@ -1,75 +1,72 @@
 {
-    "firestore": {
-      "rules": "firestore.rules",
-      "indexes": "firestore.indexes.json"
-    },
-    "functions": {
-      "predeploy": [
-        "cd \"$RESOURCE_DIR\" && yarn lint",
-        "cd \"$RESOURCE_DIR\" && yarn build"
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "functions": {
+    "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build",
+    "source": "functions"
+  },
+  "hosting": [
+    {
+      "target": "dashboard-staging",
+      "public": "public/dashboard",
+      "cleanUrls": true,
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
       ],
-      "source": "functions"
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
     },
-    "hosting": [
-      {
-        "target": "dashboard-staging",
-        "public": "public/dashboard",
-        "cleanUrls": true,
-        "ignore": [
-          "firebase.json",
-          "**/.*",
-          "**/node_modules/**"
-        ],
-        "rewrites": [
-          {
-            "source": "**",
-            "destination": "/index.html"
-          }
-        ]
-      },
-      {
-        "target": "dashboard-prod",
-        "public": "public/dashboard",
-        "cleanUrls": true,
-        "ignore": [
-          "firebase.json",
-          "**/.*",
-          "**/node_modules/**"
-        ],
-        "rewrites": [
-          {
-            "source": "**",
-            "destination": "/index.html"
-          }
-        ]
-      },
-      {
-        "target": "web-staging",
-        "public": "public/web",
-        "cleanUrls": true,
-        "ignore": [
-          "firebase.json",
-          "**/.*",
-          "**/node_modules/**"
-        ]
-      },
-      {
-        "target": "web-prod",
-        "public": "public/web",
-        "cleanUrls": true,
-        "ignore": [
-          "firebase.json",
-          "**/.*",
-          "**/node_modules/**"
-        ]
-      }
-    ],
-    "storage": {
-      "rules": "storage.rules"
+    {
+      "target": "dashboard-prod",
+      "public": "public/dashboard",
+      "cleanUrls": true,
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
     },
-    "emulators": {
-      "firestore": {
-        "port": 5555
-      }
+    {
+      "target": "web-staging",
+      "public": "public/web",
+      "cleanUrls": true,
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ]
+    },
+    {
+      "target": "web-prod",
+      "public": "public/web",
+      "cleanUrls": true,
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ]
+    }
+  ],
+  "storage": {
+    "rules": "storage.rules"
+  },
+  "emulators": {
+    "firestore": {
+      "port": 5555
     }
   }
+}
