add magic link to line 68

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -65,7 +65,7 @@
         "data": [
           {
             "scheme": "https",
-            "host": "..."
+            "host": "https://bipolarbridges.page.link/magic"
           }
         ],
         "category": [
