--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "deploy:dashboard:stage": "yarn build:dashboard:stage && cd server/functions && yarn deploy:hosting:dashboard:stage",
         "deploy:dashboard:prod": "yarn build:dashboard:prod && cd server/functions && yarn deploy:hosting:dashboard:prod",
         "env:set": "bash bin/env_set.bash",
-        "env:clean": "bash bin/env_clean.bash"
+        "env:clean": "bash bin/env_clean.bash",
+        "env:show": "less .env"
     },
     "author": "zajno",
     "license": "ISC",
