--- a/mobile/ios/CompanionKit/Info-template.plist
+++ b/mobile/ios/CompanionKit/Info-template.plist
@@ -29,7 +29,15 @@
 			<string>Bundle ID</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.maslo.companionkit</string>
+				<string>${IOS_BUNDLE_ID}</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>${IOS_REVERSED_CLIENT_ID}</string>
 			</array>
 		</dict>
 	</array>
