--- a/mobile/app-template.json
+++ b/mobile/app-template.json
@@ -36,7 +36,7 @@
     "config": {
       "usesNonExemptEncryption": false,
       "googleSignIn": {
-        "reservedClientId": "..."
+        "reservedClientId": "${IOS_REVERSED_CLIENT_ID}"
       }
     },
     "associatedDomains": [
