Fix "Record" button bug on IOS and Android (#18)
* Add reason for the need to access audio recording for both Android and iOS

Co-authored-by: wynnset <wynnset@niavarani.com>

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -44,7 +44,7 @@
     ],
     "googleServicesFile": "./configs/app/GoogleService-Info.plist",
     "infoPlist": {
-      "NSMicrophoneUsageDescription": "...",
+      "NSMicrophoneUsageDescription": "Enable this app to record your response to this check-in prompt.",
       "NSPhotoLibraryUsageDescription": "..."
     }
   },
