--- a/mobile/ios/CompanionKit/Info.plist
+++ b/mobile/ios/CompanionKit/Info.plist
@@ -40,7 +40,7 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Enable this app to record your response to this check-in prompt.</string>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
