--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,32 +22,32 @@
   "dependencies": {
     "@heymaslo/persona": "./dependencies/persona",
     "@heymaslo/persona-expo": "./dependencies/persona/expo",
-    "@react-native-community/datetimepicker": "2.2.2",
+    "@react-native-community/datetimepicker": "3.0.4",
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "chroma-js": "^2.1.0",
     "computed-async-mobx": "^4.2.1",
     "d3": "^5.15.1",
-    "expo": "^37.0.7",
-    "expo-apple-authentication": "~2.1.1",
-    "expo-asset": "~8.1.4",
-    "expo-av": "~8.1.0",
-    "expo-camera": "~8.2.0",
-    "expo-constants": "~9.0.0",
-    "expo-crypto": "~8.1.0",
-    "expo-device": "^2.1.0",
-    "expo-file-system": "~8.1.0",
-    "expo-font": "~8.1.0",
-    "expo-gl": "~8.1.0",
+    "expo": "^40.0.0",
+    "expo-apple-authentication": "~2.2.2",
+    "expo-asset": "~8.2.1",
+    "expo-av": "~8.7.0",
+    "expo-camera": "~9.1.0",
+    "expo-constants": "~9.3.3",
+    "expo-crypto": "~8.4.0",
+    "expo-device": "~2.4.0",
+    "expo-file-system": "~9.3.0",
+    "expo-font": "~8.4.0",
+    "expo-gl": "~9.2.0",
     "expo-google-app-auth": "^8.1.0",
-    "expo-google-sign-in": "~8.1.0",
-    "expo-haptics": "~8.1.0",
-    "expo-image-manipulator": "~8.1.0",
-    "expo-image-picker": "~8.1.0",
-    "expo-media-library": "~8.1.0",
-    "expo-sensors": "~8.1.0",
+    "expo-google-sign-in": "~8.4.0",
+    "expo-haptics": "~8.4.0",
+    "expo-image-manipulator": "~8.4.0",
+    "expo-image-picker": "~9.2.0",
+    "expo-media-library": "~10.0.0",
+    "expo-sensors": "~9.2.0",
     "expo-three": "^5.4.0",
-    "expo-updates": "~0.1.2",
+    "expo-updates": "~0.4.1",
     "firebase": "7.9.0",
     "gsap": "^3.2.6",
     "history": "^4.10.1",
@@ -58,15 +58,15 @@
     "mobx-react": "^6.2.2",
     "mobx-utils": "^5.5.7",
     "qs": "^6.9.3",
-    "react": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
+    "react": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-appearance": "~0.3.3",
-    "react-native-gesture-handler": "~1.6.1",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-markdown-renderer": "^3.2.8",
     "react-native-modal-datetime-picker": "^8.5.4",
     "react-native-shadow": "^1.2.2",
-    "react-native-svg": "~11.0.1",
+    "react-native-svg": "12.1.0",
     "react-native-switch-pro": "./dependencies/react-native-switch-pro",
     "react-test-renderer": "^16.13.1",
     "sentry-expo": "^2.0.3",
@@ -75,7 +75,7 @@
     "tslib": "^1.11.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "~7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -85,8 +85,8 @@
     "@types/d3": "^5.7.2",
     "@types/history": "^4.7.5",
     "@types/jest": "^25.2.1",
-    "@types/react": "^16.9.11",
-    "@types/react-native": "^0.60.22",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
     "@types/react-test-renderer": "^16.9.2",
     "@types/ts-nameof": "^4.2.1",
     "axios-mock-adapter": "^1.18.1",
@@ -94,7 +94,7 @@
     "babel-plugin-replace-dynamic-import-runtime": "^1.0.2",
     "babel-plugin-transform-define": "^2.0.0",
     "babel-plugin-ts-nameof": "^4.2.0",
-    "babel-preset-expo": "^8.1.0",
+    "babel-preset-expo": "8.3.0",
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
@@ -102,7 +102,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "expo-codemod": "^1.0.18",
     "jest": "^25.2.7",
-    "jest-expo": "^37.0.0",
+    "jest-expo": "^40.0.0",
     "prop-types": "^15.7.2",
     "react-dom": "16.13.1",
     "react-native-svg-transformer": "^0.14.3",
@@ -113,7 +113,7 @@
     "ts-node": "^8.8.2",
     "tslint": "^6.1.1",
     "ttypescript": "^1.5.10",
-    "typescript": "^3.8.3"
+    "typescript": "~4.0.0"
   },
   "jest": {
     "preset": "jest-expo",
