add section for client id url type

--- a/mobile/ios/CompanionKit/Info.plist
+++ b/mobile/ios/CompanionKit/Info.plist
@@ -32,6 +32,14 @@
 				<string>com.maslo.companionkit</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>REVERSED_CLIENT_ID_HERE!!</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
