--- a/mobile/app-template.json
+++ b/mobile/app-template.json
@@ -32,7 +32,7 @@
     "usesAppleSignIn": true,
     "icon": "./src/assets/appicons/appicon.png",
     "buildNumber": "1",
-    "bundleIdentifier": "com.maslo.companionkit",
+    "bundleIdentifier": "${APP_BUNDLE_ID}",
     "config": {
       "usesNonExemptEncryption": false,
       "googleSignIn": {
@@ -40,7 +40,7 @@
       }
     },
     "associatedDomains": [
-      "applinks:bipolarbridges.page.link"
+      "${MAGIC_LINK_ASSOCIATED_DOMAIN}"
     ],
     "googleServicesFile": "./configs/app/GoogleService-Info.plist",
     "infoPlist": {
@@ -55,7 +55,7 @@
         "certificateHash": "${FB_ANDROID_CERT_HASH}"
       }
     },
-    "package": "com.maslo.companionkit",
+    "package": "${APP_BUNDLE_ID}",
     "googleServicesFile": "./configs/app/google-services.json",
     "versionCode": 1,
     "intentFilters": [
@@ -65,7 +65,7 @@
         "data": [
           {
             "scheme": "https",
-            "host": "bipolarbridges.page.link"
+            "host": "${MAGIC_LINK_HOSTNAME}"
           }
         ],
         "category": [
