--- a/mobile/ios/CompanionKit/Info-template.plist
+++ b/mobile/ios/CompanionKit/Info-template.plist
@@ -29,7 +29,7 @@
 			<string>Bundle ID</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>${IOS_BUNDLE_ID}</string>
+				<string>${APP_BUNDLE_ID}</string>
 			</array>
 		</dict>
 		<dict>
