template entitlements file

--- a/mobile/.gitignore
+++ b/mobile/.gitignore
@@ -69,3 +69,4 @@ android/app/google-services.json
 app.json
 ios/CompanionKit/Info.plist
 ios/CompanionKit.xcodeproj/project.pbxproj
+ios/CompanionKit/CompanionKit.entitlements
