--- a/mobile/ios/CompanionKit/CompanionKit-template.entitlements
+++ b/mobile/ios/CompanionKit/CompanionKit-template.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:bipolarbridges.page.link</string>
+		<string>${MAGIC_LINK_ASSOCIATED_DOMAIN}</string>
 	</array>
 </dict>
 </plist>
