sentry config templates

--- a/.env-starter
+++ b/.env-starter
@@ -21,6 +21,10 @@ GOOGLE_CLIENT_ID_ANDROID=
 GOOGLE_CLIENT_ID_IOS=
 
 SENTRY_DSN=
+SENTRY_URL=
+SENTRY_ORG=
+SENTRY_PROJECT=
+SENTRY_AUTH_TOKEN=
 
 APP_BUNDLE_ID=
 
