--- a/common/models/ClientCard.ts.template
+++ b/common/models/ClientCard.ts.template
@@ -44,10 +44,12 @@ export namespace CoachClientActions {
     export const Helper = new EnumStringHelper<CoachClientActions>(CoachClientActions);
 }
 
-const defaultClientInviteMinPeriod = 1000 * 3600 * 24; // 1 day
-let useTestPeriod = "${USE_TEST_INVITE_PERIOD}";
-export const ClientInviteMinPeriod
-    = useTestPeriod == "true" ? 1000 : defaultClientInviteMinPeriod;
+const clientInvitePeriods = {
+    DEFAULT: 1000 * 3600 * 24,
+    TEST: 1000,
+};
+
+export const ClientInviteMinPeriod = clientInvitePeriods.${CLIENT_INVITE_PERIOD};
 
 /**
  * Client's data, stored inside coach.
