add invite period to env starter

--- a/.env-starter
+++ b/.env-starter
@@ -41,6 +41,7 @@ EMAIL_ADMIN_EMAIL=
 
 DASHBOARD_CLIENT_INVITATION_LINK=
 DASHBOARD_URL=
+CLIENT_INVITE_PERIOD=DEFAULT
 
 CLIENT_SETTINGS_TYPE_IOS=
 CLIENT_SETTINGS_TYPE_ANDROID=
