--- a/.env-starter
+++ b/.env-starter
@@ -1,50 +1,50 @@
-FB_WEB_API_KEY=
-FB_WEB_AUTH_DOMAIN=
-FB_WEB_DB_URL=
-FB_WEB_PROJECT_ID=
-FB_WEB_STORAGE_BUCKET=
-FB_WEB_MSG_SENDER_ID=
-FB_WEB_APP_ID=
-FB_WEB_MEASUREMENT_ID=
+FB_WEB_API_KEY=                              API key from firebase web app config           e.g. ABC...XYZ                         
+FB_WEB_AUTH_DOMAIN=                          Auth domain from firebase web app config       e.g. project.firebaseapp.com           
+FB_WEB_DB_URL=                               DB url from firebase web app config            e.g. https://project.firebaseio.com    
+FB_WEB_PROJECT_ID=                           project id from firebase web app config        e.g. project                           
+FB_WEB_STORAGE_BUCKET=                       storage bucket from firebase web app config    e.g. project.appspot.com               
+FB_WEB_MSG_SENDER_ID=                        sender id from firebase web app config         e.g. 123456789                         
+FB_WEB_APP_ID=                               app id from firebase web app config            e.g. 1:abc...:web:...xyz               
+FB_WEB_MEASUREMENT_ID=                       measurement id from firebase web app config    e.g. G-123ABCDEFG                      
 
-FB_IOS_APP_ID=
-FB_IOS_API_KEY=
-FB_ANDROID_APP_ID=
-FB_ANDROID_API_KEY=
-FB_ANDROID_CERT_HASH=
+FB_IOS_APP_ID=                               ios app id from .plist file                    e.g. 1:abc...:ios:...xyz               
+FB_IOS_API_KEY=                              ios app API key from .plist file               e.g. ABC...XYZ                         
+FB_ANDROID_APP_ID=                           android app id from .json file                 e.g. 1:abc...:android:...xyz           
+FB_ANDROID_API_KEY=                          android app API key from .json file            e.g. ABC...XYZ                         
+FB_ANDROID_CERT_HASH=                        android certificate hash from .json file       e.g. abcdkjewik3232kjnfejk32           
 
-FB_HOSTING_DASHBOARD_URL=
-FB_HOSTING_WEB_URL=
+FB_HOSTING_DASHBOARD_URL=                    firebase hosting URL for dashboard             e.g. https://project.web.app           
+FB_HOSTING_WEB_URL=                          firebase hosting URL for dashboard             e.g. https://project.web.app           
 
-GOOGLE_CLIENT_ID_NATIVE=...
-GOOGLE_CLIENT_ID_ANDROID=
-GOOGLE_CLIENT_ID_IOS=
+GOOGLE_CLIENT_ID_NATIVE=                     NOT USED
+GOOGLE_CLIENT_ID_ANDROID=                    android client id from .json file              e.g. abcde.apps.googleusercontent.com  
+GOOGLE_CLIENT_ID_IOS=                        ios client id from .json file                  e.g. fghij.apps.googleusercontent.com  
 
-SENTRY_DSN=
-SENTRY_URL=
-SENTRY_ORG=
-SENTRY_PROJECT=
-SENTRY_AUTH_TOKEN=
+SENTRY_DSN=                                  sentry project DSN                             e.g. https://abcdefg@fjk.ingest.sentry.io/5593457  
+SENTRY_URL=https://sentry.io/                URL of sentry instance
+SENTRY_ORG=                                  sentry organization name (max 30 chars)        e.g. the-university-of-british-colu    
+SENTRY_PROJECT=                              sentry project name                            e.g. project                           
+SENTRY_AUTH_TOKEN=                           sentry auth token (get from another dev)                                              
 
-APP_BUNDLE_ID=
+APP_BUNDLE_ID=                               app bundle identifier for app store etc.       e.g. com.company.project               
 
-IOS_DEVELOPMENT_TEAM=
-IOS_REVERSED_CLIENT_ID=
+IOS_DEVELOPMENT_TEAM=                        development team string for XCode              e.g. N6GTY9                            
+IOS_REVERSED_CLIENT_ID=                      ios reversed client id from .plist file        e.g. com.googleusercontent.apps.abc123 
 
-EMAIL_PROJECT_NAME=
-EMAIL_PROJECT_NAME_PRODUCTION=
-EMAIL_SENDGRID_API_KEY=
-EMAIL_SENDGRID_TEMPLATE_ID=
-EMAIL_SENDGRID_VERIFICATION_TEMPLATE_ID=
-EMAIL_FROM_ADDRESS=
-EMAIL_ADMIN_EMAIL=
+EMAIL_PROJECT_NAME=                          project name to appear in emails               e.g. Project                           
+EMAIL_PROJECT_NAME_PRODUCTION=               project name to appear in emails               e.g. Companion kit [Staging]
+EMAIL_SENDGRID_API_KEY=                      SendGrid API key
+EMAIL_SENDGRID_TEMPLATE_ID=                  SendGrid template id for invites
+EMAIL_SENDGRID_VERIFICATION_TEMPLATE_ID=     SendGrid template id for verification message
+EMAIL_FROM_ADDRESS=                          address that email is sent from
+EMAIL_ADMIN_EMAIL=                           SendGrid admin email
 
-DASHBOARD_CLIENT_INVITATION_LINK=
-DASHBOARD_URL=
-CLIENT_INVITE_PERIOD=DEFAULT
+DASHBOARD_CLIENT_INVITATION_LINK=            Invite magic link url                          e.g. https://project.page.link/magic
+DASHBOARD_URL=                               Hosting URL for dashboard                      e.g. https://bipolarbridges.web.app
+CLIENT_INVITE_PERIOD=DEFAULT                 Invite cool-down setting.                      Must be DEFAULT or TEST
 
-CLIENT_SETTINGS_TYPE_IOS=
-CLIENT_SETTINGS_TYPE_ANDROID=
+CLIENT_SETTINGS_TYPE_IOS=                                                                   e.g. com.company.ios
+CLIENT_SETTINGS_TYPE_ANDROID=                                                               e.g. com.company.android
 
-MAGIC_LINK_HOSTNAME=
-MAGIC_LINK_ASSOCIATED_DOMAIN=
+MAGIC_LINK_HOSTNAME=                                                                        e.g. project.page.link
+MAGIC_LINK_ASSOCIATED_DOMAIN=                                                               e.g. applinks:project.page.link
