--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "build:dashboard": "cd dashboard && yarn && yarn build:prod:env:toserver && cd ..",
         "build:dashboard:stage": "cross-env APP_ENV=staging yarn build:dashboard",
         "build:dashboard:prod": "cross-env APP_ENV=production yarn build:dashboard",
+        "build:server": "cd server/functions && yarn build",
         "deploy:server:stage": "cd server/functions && yarn && yarn deploy:stage && cd ../..",
         "deploy:server:prod": "cd server/functions && yarn && yarn deploy:prod && cd ../..",
         "deploy:dashboard": "yarn build:dashboard && cd server/functions && yarn deploy:hosting:dashboard",
