--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,21 +16,15 @@ jobs:
       - name: Create environment file
         working-directory: companion-app
         run: cp test.env .env
-      - name: Install top-level modules
-        uses: actions/setup-node@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: '10'
+      - name: Install top-level modules
         working-directory: companion-app
         run: yarn install
       - name: Set environment
-        uses: actions/setup-node@v2
-        with:
-          node-version: '10'
         working-directory: companion-app
         run: yarn env:set
       - name: Install all modules
-        uses: actions/setup-node@v2
-        with:
-          node-version: '10'
         working-directory: companion-app
         run: yarn all
