--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,11 +8,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: companion-app
-          submodules: 'true'
       - name: Check out external services
         uses: actions/checkout@v2
         with:
           repository: bipolarbridges/data-services
+          ref: 1b2726afd1fbea4e55e638d71744efffd024b9a3
           path: data-services
       - name: Create environment file
         working-directory: companion-app
