--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,12 @@ jobs:
           repository: bipolarbridges/data-services
           ref: 1b2726afd1fbea4e55e638d71744efffd024b9a3
           path: data-services
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '12'
+      - name: Start API service
+        working-directory: data-services
+        run: yarn start
       - name: Create environment file
         working-directory: companion-app
         run: cp test.env .env
@@ -23,3 +29,6 @@ jobs:
       - name: Set up project
         working-directory: companion-app
         run: ./bin/setup.bash -y -p 0
+      - name: Test functions
+        working-directory: companion-app/server/functions
+        run: yarn test
