--- a/.docker.env
+++ b/.docker.env
@@ -48,3 +48,6 @@ CLIENT_SETTINGS_TYPE_ANDROID=
 
 MAGIC_LINK_HOSTNAME=
 MAGIC_LINK_ASSOCIATED_DOMAIN=
+
+FB_EMULATOR_UI_ADDR=0.0.0.0
+FB_EMULATOR_UI_PORT=4000
