change command to enable interactivity

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3'
 services:
   server:
     build: .
-    command: sh -c "cd server/functions && yarn serve"
+    tty: true
+    stdin_open: true
+    command: sh -c "cd server/functions && bash"
     ports:
       - 4000:4000
       - 5000:5000
