--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
         "deploy:dashboard:prod": "yarn build:dashboard:prod && cd server/functions && yarn deploy:hosting:dashboard:prod",
         "env:set": "bash bin/env_set.bash",
         "env:clean": "bash bin/env_clean.bash",
-        "env:show": "less .env",
-		"test:functions": "cd server/functions && yarn test"
+        "env:show": "less .env"
     },
     "author": "zajno",
     "license": "ISC",
