--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     tty: true
     stdin_open: true
-    command: sh -c "cd server/functions && bash"
+    command: bash
     ports:
       - 4000:4000
       - 5000:5000
