Use environment variables and fix file templates for global project settings (#15)
* Create templates and fixed settings per the setup documentation.
* Create a basic environment substitution system for simplifying and consolidating the different settings throughout the project.
* This will prevent discrepancies in configuration, and accidental commit of sensitive or team-specific values.
* Update README with updated setup information and run and deploy instructions

Co-authored-by: Cara Wong <caraalyssa.wong@gmail.com>
Co-authored-by: habimana <rugwiroclement@gmail.com>
Co-authored-by: Aidin Niavarani <aidin@wynnset.com>

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.0.2",
+    "@react-native-firebase/app": "^10.5.0",
+    "@sentry/react-native": "^2.1.1",
     "base-64": "^0.1.0",
     "chroma-js": "2.0.3",
     "computed-async-mobx": "^4.2.1",
