--- a/mobile/ios/CompanionKit/CompanionKit-template.entitlements
+++ b/mobile/ios/CompanionKit/CompanionKit-template.entitlements
@@ -2,12 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>com.apple.developer.healthkit</key>
- 	<true/>
- 	<key>com.apple.developer.healthkit.access</key>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
 		<string>${MAGIC_LINK_ASSOCIATED_DOMAIN}</string>
 	</array>
+	<key>com.apple.developer.healthkit</key>
+	<true/>
+	<key>com.apple.developer.healthkit.access</key>
+	<array/>
 </dict>
 </plist>
