--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,10 @@ jobs:
         uses: actions/checkout@v2
       - name: Create environment file
         run: cp test.env .env
+      - name: Use correct node version
+        uses: actions/setup-node@v2
+        with:
+          node-version: '10'
       - name: Initialize project
         run: ./bin/setup.bash -y -p 0 -f 1 -s 0
       - name: Lint functions code
