add test command

--- a/server/functions/package.json
+++ b/server/functions/package.json
@@ -22,7 +22,7 @@
     "deploy:hosting:web:stage": "firebase deploy -P staging --only hosting:web-staging",
     "deploy:hosting:web:prod": "firebase deploy -P production --only hosting:web-prod",
     "logs": "firebase functions:log",
-    "test": "echo 'Running tests!'"
+    "test": "env-cmd firebase emulators:exec -P staging 'jest test'"
   },
   "main": "lib/server/functions/src/index.js",
   "engines": {
