--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
           node-version: '10'
       - name: Initialize project
         run: ./bin/setup.bash -y -p 0 -f 1 -s 1
+      - name: Show firebase dependencies
+        run: yarn list | grep firebase
       - name: Lint functions code
         run: yarn lint:server
       - name: Build server
