--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,10 @@ jobs:
           node-version: '10'
       - name: Initialize project
         run: ./bin/setup.bash -y -p 0 -f 1 -s 1
-      - name: Show firebase dependencies
+      - name: Show firebase dependencies (root)
+        run: yarn list | grep firebase
+      - name: Show firebase dependencies (server)
+        working-directory: server/functions
         run: yarn list | grep firebase
       - name: Lint functions code
         run: yarn lint:server
