build command and include in workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,3 +25,4 @@ jobs:
         run: yarn build:server
       - name: Build dashboard
         run: yarn build:dashboard
+      - run: yarn build:mobile
