--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "env:set": "bash bin/env_set.bash",
         "env:clean": "bash bin/env_clean.bash",
         "env:show": "less .env",
-        "test": "cd server/functions && yarn test"
+        "test": "cd server/functions && yarn test",
+        "build:mobile": "cd mobile && yarn build"
     },
     "author": "zajno",
     "license": "ISC",
