Revert "build command and include in workflow"
This reverts commit 9240f9a9854e0743453ab96438d8c058216f9bde.

--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
         "env:set": "bash bin/env_set.bash",
         "env:clean": "bash bin/env_clean.bash",
         "env:show": "less .env",
-        "test": "cd server/functions && yarn test",
-        "build:mobile": "cd mobile && yarn build"
+        "test": "cd server/functions && yarn test"
     },
     "author": "zajno",
     "license": "ISC",
