Add automated testing infrastructure and utils (#27)
* Automated testing infrastructure including a Jest configuration in the server/functions directory.
* Utils for managing firebase state
* Adds a CI workflow and makes changes where necessary.
* Removes extra package-lock.json to suppress warning in emulator.
* Note: Requires running `yarn install` in `functions` directory to get testing dependencies.

Co-authored-by: Aidin Niavarani <aidin@wynnset.com>

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "dev:dashboard": "cd dashboard && yarn dev",
         "dev:server": "cd server/functions && yarn dev:functions",
         "dev": "concurrently -k \"yarn dev:server\" \"yarn dev:dashboard\"",
+        "lint:server": "cd server/functions && yarn lint",
         "build:emails": "cd emails && npm i && npm run build && cd ..",
         "build:dashboard": "cd dashboard && yarn && yarn build:prod:env:toserver && cd ..",
         "build:dashboard:stage": "cross-env APP_ENV=staging yarn build:dashboard",
@@ -23,7 +24,8 @@
         "deploy:dashboard:prod": "yarn build:dashboard:prod && cd server/functions && yarn deploy:hosting:dashboard:prod",
         "env:set": "bash bin/env_set.bash",
         "env:clean": "bash bin/env_clean.bash",
-        "env:show": "less .env"
+        "env:show": "less .env",
+        "test": "cd server/functions && yarn test"
     },
     "author": "zajno",
     "license": "ISC",
