--- a/test.env
+++ b/test.env
@@ -1,16 +1,16 @@
 FB_WEB_API_KEY=
-FB_WEB_AUTH_DOMAIN=     
+FB_WEB_AUTH_DOMAIN=
 FB_WEB_DB_URL=
-FB_WEB_PROJECT_ID=                
-FB_WEB_STORAGE_BUCKET=        
-FB_WEB_MSG_SENDER_ID=               
-FB_WEB_APP_ID=          
-FB_WEB_MEASUREMENT_ID=               
+FB_WEB_PROJECT_ID=bipolarbridges
+FB_WEB_STORAGE_BUCKET=
+FB_WEB_MSG_SENDER_ID=
+FB_WEB_APP_ID=
+FB_WEB_MEASUREMENT_ID=
 
 FB_IOS_APP_ID=
-FB_IOS_API_KEY=                    
+FB_IOS_API_KEY=
 FB_ANDROID_APP_ID=
-FB_ANDROID_API_KEY=         
+FB_ANDROID_API_KEY=
 FB_ANDROID_CERT_HASH=
 
 FB_HOSTING_DASHBOARD_URL=
@@ -26,12 +26,12 @@ SENTRY_ORG=
 SENTRY_PROJECT=
 SENTRY_AUTH_TOKEN=
 
-APP_BUNDLE_ID=              
+APP_BUNDLE_ID=
 
-IOS_DEVELOPMENT_TEAM=                        
+IOS_DEVELOPMENT_TEAM=
 IOS_REVERSED_CLIENT_ID=
 
-EMAIL_PROJECT_NAME=                         
+EMAIL_PROJECT_NAME=
 EMAIL_PROJECT_NAME_PRODUCTION=
 EMAIL_SENDGRID_API_KEY=
 EMAIL_SENDGRID_TEMPLATE_ID=
