--- a/server/functions/package.json
+++ b/server/functions/package.json
@@ -3,7 +3,7 @@
   "version": "1.5.6",
   "scripts": {
     "lint": "tslint --project tsconfig.json",
-	"lint:fix": "tslint --project tsconfig.json --fix",
+    "lint:fix": "tslint --project tsconfig.json --fix",
     "build": "rm -rf ./lib && ttsc",
     "watch": "concurrently \"nodemon --exec \\\"yarn lint\\\" \" \"tsc --watch --noEmit\" ",
     "serve": "env-cmd firebase emulators:start --only functions,firestore -P staging",
@@ -61,7 +61,7 @@
     "uuid": "^8.3.0"
   },
   "devDependencies": {
-    "@firebase/testing": "^0.20.11",
+    "@firebase/rules-unit-testing": "^1.3.3",
     "@types/chai": "^4.2.16",
     "@types/jest": "^26.0.22",
     "@types/uuid": "^8.0.0",
