--- a/mobile/package.json
+++ b/mobile/package.json
@@ -44,6 +44,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-appearance": "^0.3.4",
     "react-native-google-fit": "^0.16.2",
+    "react-native-health": "^1.8.0",
     "react-native-markdown-renderer": "^3.2.8",
     "react-native-modal-datetime-picker": "^8.9.3",
     "react-native-shadow": "^1.2.2",
