--- a/server/firebase-template.json
+++ b/server/firebase-template.json
@@ -1,12 +1,12 @@
 {
   "firestore": {
-    "rules": "firebase.rules",
+    "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
   "functions": {
     "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint",
-      "npm --prefix \"$RESOURCE_DIR\" run build"
+      "cd \"$RESOURCE_DIR\" && yarn lint",
+      "cd \"$RESOURCE_DIR\" && yarn build"
     ],
     "source": "functions"
   },
@@ -53,23 +53,37 @@
         "**/node_modules/**"
       ]
     },
-	"emulators": {
-    	"ui": {
-      		"enabled": true,
-      		"host": "${FB_EMULATOR_UI_ADDR}",
-      		"port": "${FB_EMULATOR_UI_PORT}"
-    	},
-    	"firestore": {
-      		"port": 5555
-    	},
-    	"functions": {
-      		"port": 5001
-    	},
-    	"hosting": {
-      		"port": 5000
-    	},
-    	"auth": {
-      		"port": 9099
-    	}
-  	}
+    {
+      "target": "web-prod",
+      "public": "public/web",
+      "cleanUrls": true,
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ]
+    }
+  ],
+  "storage": {
+    "rules": "storage.rules"
+  },
+"emulators": {
+    "ui": {
+        "enabled": true,
+        "host": "${FB_EMULATOR_UI_ADDR}",
+        "port": "${FB_EMULATOR_UI_PORT}"
+    },
+    "firestore": {
+        "port": 5555
+    },
+    "functions": {
+        "port": 5001
+    },
+    "hosting": {
+        "port": 5000
+    },
+    "auth": {
+        "port": 9099
+    }
+  }
 }
