testing swipe navigation

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.0.2",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^10.5.0",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
     "@sentry/react-native": "^2.1.1",
     "base-64": "^0.1.0",
     "chroma-js": "2.0.3",
@@ -46,6 +49,9 @@
     "react-native-appearance": "^0.3.4",
     "react-native-markdown-renderer": "^3.2.8",
     "react-native-modal-datetime-picker": "^8.9.3",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.4.0",
     "react-native-shadow": "^1.2.2",
     "react-native-svg": "^12.1.0",
     "react-native-unimodules": "^0.10.1",
