Revert "testing swipe navigation"
This reverts commit be50d6f90df281d68f1d37a530d9472d597aa0c2.

--- a/package.json
+++ b/package.json
@@ -58,11 +58,6 @@
         "typescript": "^3.8.3"
     },
     "dependencies": {
-        "@react-native-community/masked-view": "^0.1.11",
-        "@react-native-firebase/dynamic-links": "^10.0.0",
-        "react-native-gesture-handler": "^1.10.3",
-        "react-native-reanimated": "^2.2.0",
-        "react-native-safe-area-context": "^3.2.0",
-        "react-native-screens": "^3.4.0"
+        "@react-native-firebase/dynamic-links": "^10.0.0"
     }
 }
