explicity disable submodule in script

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: '10'
       - name: Initialize project
-        run: ./bin/setup.bash -y -p 0 -f 1 -s 1
+        run: ./bin/setup.bash -y -p 0 -f 1 -s 0 # submodules enabled in checkout
       - name: Show firebase dependencies (root)
         run: yarn list | grep firebase
       - name: Show firebase dependencies (server)
