--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
 version: '3'
 services:
   server:
-    build: .
+    build:
+      context: .
+      args:
+        - submodule_user=${DOCKER_SUBMODULE_USER}
+        - submodule_email=${DOCKER_SUBMODULE_EMAIL}
     tty: true
     stdin_open: true
     command: sh -c "cd server/functions && yarn serve"
