--- a/mobile/package.json
+++ b/mobile/package.json
@@ -46,9 +46,11 @@
     "react-native-appearance": "^0.3.4",
     "react-native-markdown-renderer": "^3.2.8",
     "react-native-modal-datetime-picker": "^8.9.3",
+    "react-native-paper": "^4.9.2",
     "react-native-shadow": "^1.2.2",
     "react-native-svg": "^12.1.0",
     "react-native-unimodules": "^0.10.1",
+    "react-native-vector-icons": "^8.1.0",
     "rn-apple-healthkit": "0.8.0",
     "sentry-expo": "^2.1.2",
     "simplex-noise": "2.4.0",
