--- a/server/functions/package.json
+++ b/server/functions/package.json
@@ -3,6 +3,7 @@
   "version": "1.5.6",
   "scripts": {
     "lint": "tslint --project tsconfig.json",
+    "lint:fix": "tslint --project tsconfig.json --fix",
     "build": "rm -rf ./lib && ttsc",
     "watch": "concurrently \"nodemon --exec \\\"yarn lint\\\" \" \"tsc --watch --noEmit\" ",
     "serve": "env-cmd firebase emulators:start -P staging",
@@ -21,6 +22,8 @@
     "deploy:hosting:dashboard:prod": "firebase deploy -P production --only hosting:dashboard-prod",
     "deploy:hosting:web:stage": "firebase deploy -P staging --only hosting:web-staging",
     "deploy:hosting:web:prod": "firebase deploy -P production --only hosting:web-prod",
+    "deploy:firestore:stage": "firebase deploy -P staging --only firestore",
+    "deploy:rules:stage": "firebase deploy -P staging --only firestore:rules",
     "logs": "firebase functions:log",
     "test": "yarn build && env-cmd firebase emulators:exec -P staging 'jest test --config=./jest.config.js'"
   },
@@ -58,6 +61,7 @@
     "uuid": "^8.3.0"
   },
   "devDependencies": {
+    "@firebase/rules-unit-testing": "^1.3.14",
     "@types/chai": "^4.2.16",
     "@types/jest": "^26.0.22",
     "@types/uuid": "^8.0.0",
