--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "mobile/dependencies/persona"]
 	path = mobile/dependencies/persona
-	url = git@github.com:HeyMaslo/maslo-persona.git
-	branch = dev-ts
+	url = git@github.com:bipolarbridges/maslo-persona.git
+	branch = bipolarbridges-persona
 [submodule "mobile/dependencies/react-native-switch-pro"]
 	path = mobile/dependencies/react-native-switch-pro
 	url = git@github.com:HeyMaslo/react-native-switch-pro.git
