--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
       - name: Check out
         uses: actions/checkout@v2
         with:
-          - submodules: true
+          submodules: true
       - name: Create environment file
         run: cp test.env .env
       - name: Use correct node version
