--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,6 @@ jobs:
     steps:
       - name: Check out
         uses: actions/checkout@v2
-        with:
-          submodules: true
       - name: Create environment file
         run: cp test.env .env
       - name: Use correct node version
@@ -15,7 +13,7 @@ jobs:
         with:
           node-version: '10'
       - name: Initialize project
-        run: ./bin/setup.bash -y -p 0 -f 1 # submodules enabled in checkout
+        run: ./bin/setup.bash -y -p 0 -f 1 -s 1
       - name: Show firebase dependencies (root)
         run: yarn list | grep firebase
       - name: Show firebase dependencies (server)
