--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: bipolarbridges/data-services
-          ref: export-api-v0
+          ref: master # change to a different branch if needed
           path: data-services
       - name: Create shared network
         run: docker network create bb_default
