--- a/server/functions/package.json
+++ b/server/functions/package.json
@@ -25,6 +25,7 @@
     "deploy:firestore:stage": "firebase deploy -P staging --only firestore",
     "deploy:rules:stage": "firebase deploy -P staging --only firestore:rules",
     "logs": "firebase functions:log",
+    "start:mock_api": "cd __tests__/mocks/api && env-cmd nvm use && yarn && yarn build && yarn start",
     "test": "yarn build && env-cmd firebase emulators:exec -P staging 'jest test --config=./jest.config.js'"
   },
   "main": "lib/server/functions/src/index.js",
@@ -62,8 +63,10 @@
   },
   "devDependencies": {
     "@firebase/rules-unit-testing": "^1.3.14",
+    "@google-cloud/firestore": "^4.2.0",
     "@types/chai": "^4.2.16",
     "@types/jest": "^26.0.22",
+    "@types/node": "^15.3.0",
     "@types/uuid": "^8.0.0",
     "chai": "^4.3.4",
     "concurrently": "^5.2.0",
