Squashed commit of the following:
commit 0a0869e1e4ffd3f5b6d9d7f451d2ea9da85a44a5
Author: Mark <71405899+MarkDavies0@users.noreply.github.com>
Date:   Sat Sep 11 13:28:17 2021 -0700

    [Dev] Fix checks.yml syntax (#108)

    Fixes indentation error in workflow configuration file.

commit bbbcb27798a3afc53263a40030963f913cfdad3b
Author: Mark <71405899+MarkDavies0@users.noreply.github.com>
Date:   Tue Sep 7 15:43:43 2021 -0700

    [Dev] Update pull_request_template.md (#106)

    * Add instruction for adding epic label in PR title

commit 7e6383b0ff3f2e84af2dea0696cd501f8ca0f8f4
Author: Rowan Lindsay <rowan@rowanlindsay.com>
Date:   Tue Sep 7 13:59:50 2021 -0700

    README fix (#90)

    Just fixes a small typo in the README about Firebase tools command

commit 549a1b71996b4504085b2b22b5605c151c7cc6c2
Author: Mark <71405899+MarkDavies0@users.noreply.github.com>
Date:   Tue Sep 7 11:59:30 2021 -0700

    Automated QA Pipeline for Android App (and Other CI Tweaks) (#80)

    - Adds steps to the build action to build the android app and type check the mobile directory.
    - Also splits existing checks into smaller workflows.

    Co-authored-by: rlnsy <rowlindsay@gmail.com>
    Co-authored-by: Mapleia <mapleia01@gmail.com>
    Co-authored-by: Rowan Lindsay <rowan@rowanlindsay.com>

commit 7dd7c38df72d28302913e8051423a1502ee0c8b0
Author: Clement Rugwiro <41169767+crugwiro@users.noreply.github.com>
Date:   Mon Aug 30 13:42:19 2021 -0700

    Focus Domain and Strategies Selection (#30)

    Allow mobile users to select 1-3 focus domains and then choose up to 4 corresponding strategies.
    - Adds `domains` and `strategies` to firebase
    - Adds `focusDomains` and `chosenStrategies` to `userState` in firebase

    Co-authored-by: rlnsy <rowlindsay@gmail.com>
    Co-authored-by: Rowan Lindsay <rowan@rowanlindsay.com>

commit 054278cb3609f37382aa55d6cadb7435f7b51734
Author: Kaede Ito <kaede.ito2001@gmail.com>
Date:   Mon Aug 30 13:17:22 2021 -0700

    Mock Backend Servi

--- a/.env-starter
+++ b/.env-starter
@@ -51,3 +51,5 @@ MAGIC_LINK_ASSOCIATED_DOMAIN=                                                   
 
 FB_EMULATOR_UI_ADDR=127.0.0.1
 FB_EMULATOR_UI_PORT=4000
+
+TEST_ENVIRONMENT=DEV
