--- a/server/functions/tsconfig.json
+++ b/server/functions/tsconfig.json
@@ -25,5 +25,10 @@
   "include": [
     "src/**/*",
     "__tests__/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "__tests__/mocks/api",
+    "**/**/*template.ts"
   ]
 }
