--- a/server/functions/package.json
+++ b/server/functions/package.json
@@ -6,7 +6,7 @@
     "lint:fix": "tslint --project tsconfig.json --fix",
     "build": "rm -rf ./lib && ttsc",
     "watch": "concurrently \"nodemon --exec \\\"yarn lint\\\" \" \"tsc --watch --noEmit\" ",
-    "serve": "env-cmd firebase emulators:start --only functions,firestore -P staging",
+    "serve": "env-cmd firebase emulators:start -P staging",
     "serve:functions": "env-cmd firebase emulators:start --only functions -P staging",
     "serve:functions:prod": "env-cmd firebase emulators:start --only functions -P production",
     "dev": "yarn build && concurrently \"nodemon --exec \\\"yarn lint && ttsc\\\" \" \"yarn serve\" ",
@@ -25,6 +25,7 @@
     "deploy:firestore:stage": "firebase deploy -P staging --only firestore",
     "deploy:rules:stage": "firebase deploy -P staging --only firestore:rules",
     "logs": "firebase functions:log",
+    "start:mock_api": "cd __tests__/mocks/api && env-cmd nvm use && yarn && yarn build && yarn start",
     "test": "yarn build && env-cmd firebase emulators:exec -P staging 'jest test --config=./jest.config.js'"
   },
   "main": "lib/server/functions/src/index.js",
@@ -61,9 +62,11 @@
     "uuid": "^8.3.0"
   },
   "devDependencies": {
-    "@firebase/rules-unit-testing": "^1.3.3",
+    "@firebase/rules-unit-testing": "^1.3.14",
+    "@google-cloud/firestore": "^4.2.0",
     "@types/chai": "^4.2.16",
     "@types/jest": "^26.0.22",
+    "@types/node": "^15.3.0",
     "@types/uuid": "^8.0.0",
     "chai": "^4.3.4",
     "concurrently": "^5.2.0",
