Squashed commit of the following:
commit 01b5750b53a84e4e66b390ec07d40ce070975591
Merge: 42062c77 64027847
Author: Aidin Niavarani <aidin@wynnset.com>
Date:   Tue Sep 14 18:20:32 2021 -0700

    [Dev] Fix dashboard build & deploy command (#91)

    - Allows the command `yarn deploy:dashboard:stage` to be run without error
    - This is done by fixing problems in the project dependencies and lock files

commit 42062c776ded8dfea706776672d99a5d86627193
Merge: 63a69117 b9507853
Author: Aidin Niavarani <aidin@wynnset.com>
Date:   Tue Sep 14 18:12:54 2021 -0700

    [Dev] Comment out failing mobile lint test (#109)

    - We can uncomment after fixing the root cause of it

commit 63a69117ad07429e84af47ad3d30f66f2940dffe
Merge: 0a0869e1 c49fbda7
Author: Aidin Niavarani <aidin@wynnset.com>
Date:   Tue Sep 14 18:11:28 2021 -0700

    [Dev] Add local nvm installation (#105)

    Development Environment Improvements
    - Adds a project-specific NVM installation managed using the project setup script
    - Modifies the project Docker image to use Ubuntu as the base, allowing us to use NVM there
    - Ensures that the subdirectories have proper .nvmrc files
    - Adds a project cleaner script
    - Changes the GitHub build workflow to clone submodules and disables them in the workflow setup script
    - Changes some behaviour and arguments of the project setup script.

commit b9507853a0917908d9515bdbf55a45f5068cbd6c
Author: Mark <71405899+MarkDavies0@users.noreply.github.com>
Date:   Tue Sep 14 13:27:56 2021 -0700

    Update checks.yml

commit c49fbda7c604be2e9f6e42d62d596f6768490f8a
Author: Rowan Lindsay <rowan@rowanlindsay.com>
Date:   Sat Sep 11 15:14:30 2021 -0700

    fix status codes

commit 2538ae83dc08289a54eaf5d4dbc08f18d23be535
Author: Rowan Lindsay <rowan@rowanlindsay.com>
Date:   Sat Sep 11 14:35:29 2021 -0700

    fixes for setting up node environment in docker

commit 2238ee99d0018e39a6b10b465715609ee2175e24
Author: Rowan Lindsay <rowan@rowanlindsay.com>
Date:   

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     build: .
     tty: true
     stdin_open: true
-    command: sh -c "cd server/functions && yarn serve"
+    command: bash -i -c "cd server/functions && yarn serve"
     ports:
       - 4000:4000
       - 5000:5000
